# weather_from_openWeather

./: .coverage  .gitignore  README.MD  config.py  coordinates.py  exceptions.py  print.py  pyproject.toml  tokens_example.py  weather.py  weather_api_service.py  weather_formater.py  weather_history.txt  weather_history_storage.py  weather_models.py  weather_openwetherapi_service.py  weather_weatherapi_service.py
services/: config.py  exceptions.py  print.py  weather_formater.py  weather_openwetherapi_service.py  weather_weatherapi_service.py
tests/: test_openweather.py  test_unitest.py  test_weatherapi.py
