[tool.poetry]
name = "weather"
version = "0.1.0"
description = "weather app to send in another destination"
authors = ["yuraisme <yuraisme@mail.ru>"]
license = "MTI"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
